Closed Bug 512282 Opened 15 years ago Closed 15 years ago

it's wrong to compile out the stack overflow check when minstack=0

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: edwsmith, Assigned: edwsmith)

References

Details

Attachments

(1 file)

Just like it's wrong to inline the current value of minstack.  It won't do the right thing in a multi-AvmCore/multi-thread environment.  Also note that when minstack=0, the compiled-in stack overflow check is still valid:  sp < 0 is false.
Assignee: nobody → edwsmith
Attachment #396255 - Flags: superreview?(lhansen)
Attachment #396255 - Flags: review?(tharwood)
Attachment #396255 - Flags: review?(tharwood) → review+
Comment on attachment 396255 [details] [diff] [review]
Never compile out the stack overflow check.

Presumably it was compiled out for speed, but the stated reasoning applies.
Attachment #396255 - Flags: superreview?(lhansen) → superreview+
pushed http://hg.mozilla.org/tamarin-redux/rev/d7695b0ec301
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Resolved fixed engineering / work item that has been pushed.  Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: