Never skip the stack overflow check (bug 512282 r=tharwood+ sr=lhansen+)

it's wrong to compile out the stack overflow check, just as its wrong
to inline the value of core->minstack.  Also we don't need the (minstack != 0)