core/CodegenLIR.cpp
@@ -1305,18 +1305,17 @@ namespace avmplus
             lirbuf->names->addName(vars, "vars");
         })
 
-        // stack overflow check - use vars address as comparison
-        if (core->minstack) {
-            LIns *d = loadIns(LIR_ldp, 0, InsConstPtr(&core->minstack));
-            LIns *c = binaryIns(LIR_pult, vars, d);
-            LIns *b = branchIns(LIR_jf, c);
-            callIns(FUNCTIONID(stkover), 1, env_param);
-            LIns *label = Ins(LIR_label);
-            verbose_only( if (lirbuf->names) { lirbuf->names->addName(label, "begin");  })
-            b->setTarget(label);
-        }
-
         coreAddr = InsConstPtr(core);
+
+        // stack overflow check - use vars address as comparison
+        LIns *d = loadIns(LIR_ldp, offsetof(AvmCore, minstack), coreAddr);
+        LIns *c = binaryIns(LIR_pult, vars, d);
+        LIns *b = branchIns(LIR_jf, c);
+        callIns(FUNCTIONID(stkover), 1, env_param);
+        LIns *label = Ins(LIR_label);
+        verbose_only( if (lirbuf->names) { lirbuf->names->addName(label, "begin");  })
+        b->setTarget(label);
+
         undefConst = InsConstAtom(undefinedAtom);
 
         #ifdef DEBUGGER
